Use Java 14+ pattern matching in `instanceof` wherever applicable + move `com.virtuslab.qual.{gitmachete => subtyping.gitmachete}`